--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 @import url("./header.css");
-
+@import url("./introduction.css");
 body {
   margin: 0px;
   padding: 0px;
@@ -12,6 +12,13 @@ ul {
   list-style: none;
 }
 
+h1,
+ul,
+p {
+  margin: 0px;
+}
+
 a {
   text-decoration: none;
+  color: inherit;
 }
