--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,25 +1,4 @@
+@import url("./global.css");
 @import url("./header.css");
+@import url("./utils/components/button.css");
 @import url("./introduction.css");
-body {
-  margin: 0px;
-  padding: 0px;
-  font-family: Arial, Helvetica, sans-serif;
-  height: 2000px;
-}
-
-ul {
-  margin: 0px;
-  padding: 0px;
-  list-style: none;
-}
-
-h1,
-ul,
-p {
-  margin: 0px;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
