--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,5 +1,5 @@
 .header-bg {
-  background: #000000;
+  background: var(--color-12);
 }
 
 .header {
@@ -21,7 +21,7 @@
 }
 
 .header-menu a {
-  color: #ffffff;
+  color: var(--color-0);
   font-size: 1.125rem; /*18px*/
   display: inline-block;
   padding: 1rem 0rem; /*16px 0px*/
@@ -35,7 +35,7 @@
   display: block;
   height: 0.125rem; /*2px*/
   width: 0%;
-  background: #ffffff;
+  background: var(--color-0);
   position: absolute;
 }
 
@@ -49,12 +49,12 @@
     gap: 1.25rem;
   }
   .header-menu a {
-    background: #111111;
+    background: var(--color-11);
     padding: 0.75rem 1rem; /*12px 16px*/
     border-radius: 0.25rem;
   }
   .header-menu a:hover {
-    background-color: #2e2e2e;
+    background-color: var(--color-10);
   }
   .header-menu a:after {
     display: none;
@@ -66,7 +66,7 @@
     gap: 0.75rem;
   }
   .header-menu a {
-    background: #111111;
+    background: var(--color-11);
     padding: 0.5rem 0.75rem; /*12px 16px*/
     font-size: 0.875px; /*14px*/
   }
