--- a/assets/css/introduction.css
+++ b/assets/css/introduction.css
@@ -1,7 +1,6 @@
 .introduction-bg {
-  background-color: #000000;
-  color: #ffffff;
-  box-shadow: inset 0 -7.5rem 0 #ffffff;
+  background-color: var(--color-12);
+  box-shadow: inset 0 -7.5rem 0 var(--color-0);
 }
 
 .introduction {
@@ -13,10 +12,6 @@
   margin: 0 auto;
   padding-left: 1.25rem; /*20px*/
   padding-right: 1.25rem; /*20px*/
-}
-
-.introduction h1 span {
-  color: #ffbb00;
 }
 
 .introduction-content {
@@ -33,19 +28,10 @@
 
 .introduction h1 {
   margin-bottom: 2rem; /*32px*/
-  font-size: 4rem; /*64px*/
-  line-height: 1.125;
-  font-family: "Poppins";
-  font-weight: 600;
 }
 
 .introduction p {
   margin-bottom: 1.25rem; /*20px*/
-  font-size: 1.5rem; /*24px*/
-  line-height: 1.5;
-  color: #b2b2b2;
-  font-family: "Roboto";
-  font-weight: 400;
 }
 
 @media (max-width: 1200px) {
@@ -59,9 +45,9 @@
 
 @media (max-width: 800px) {
   .introduction-bg {
-    background-color: #111111;
-    color: #ffffff;
-    box-shadow: inset 0 -3.75rem 0 #ffffff;
+    background-color: var(--color-11);
+    color: var(--color-0);
+    box-shadow: inset 0 -3.75rem 0 var(--color-0);
     padding-top: 2.5rem;
   }
   .introduction {
