--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,6 @@
 @import url("./global.css");
-@import url("./header.css");
 @import url("./utils/components/button.css");
+@import url("./utils/colors.css");
+@import url("./utils/font.css");
+@import url("./header.css");
 @import url("./introduction.css");
