--- a/assets/css/utils/components/button.css
+++ b/assets/css/utils/components/button.css
@@ -5,7 +5,7 @@
   border-radius: 0.25rem; /*4px*/
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1); /*x y blur fontsize ;*/
   text-transform: uppercase;
-  color: #332200;
+  color: var(--color-p5);
   font-size: 1.125rem; /*18px;*/
   line-height: 1.33;
   font-weight: bold;
