--- a/assets/css/utils/font.css
+++ b/assets/css/utils/font.css
@@ -1,13 +1,74 @@
-.large-text {
-  font-size: 4rem; /*64px*/
-  line-height: 1.125;
-  font-family: "Poppins";
-  font-weight: 600;
+.font-1-xxl {
+  font: 600 4rem/1.125 "Popins", sans-serif;
 }
 
-.medium-text {
-  font-size: 1.5rem; /*24px*/
-  line-height: 1.5;
-  font-family: "Roboto";
-  font-weight: 400;
+.font-2-xl {
+  font: 500 2rem/1.25 "Roboto", sans-serif;
+}
+
+.font-1-xl {
+  font: 600 2rem/1.25 "Popins", sans-serif;
+}
+
+.font-2-l-b {
+  font: 400 1.5rem/1.5 "Roboto", sans-serif;
+  letter-spacing: 0.015em;
+  text-transform: uppercase;
+}
+
+.font-2-l {
+  font: 400 1.5rem/1.5 "Roboto", sans-serif;
+}
+
+.font-1-l {
+  font: 400 1.5rem/1.35 "Popins", sans-serif;
+}
+
+.font-2-m {
+  font: 500 1.125rem/1.35 "Roboto", sans-serif;
+}
+
+.font-1-m-b {
+  font: 600 1.125rem/1.35 "Popins", sans-serif;
+}
+
+.font-1-m {
+  font: 400 1.125rem/1.35 "Popins", sans-serif;
+}
+
+.font-2-s {
+  font: 400 1rem/1.5 "Roboto", sans-serif;
+}
+
+.font-1-s {
+  font: 400 1rem/1.5 "Popins", sans-serif;
+}
+
+.font-2-xs {
+  font: 400 0.875rem/1.43 "Roboto", sans-serif;
+}
+
+.font-1-xs {
+  font: 400 0.75rem/1.35 "Popins", sans-serif;
+}
+
+@media (max-width: 1200px) {
+  .font-1-xxl {
+    font-size: 3rem; /*48px;*/
+  }
+  .font-2-l,
+  .font-2-l-b {
+    font-size: 1.125rem; /*18px;*/
+  }
+}
+
+@media (max-width: 800px) {
+  .font-1-xxl {
+    font-size: 2rem; /*32px;*/
+  }
+
+  .font-1-xl,
+  .font-2-xl {
+    font-size: 1.5rem;
+  }
 }
