--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -14,6 +14,8 @@ ul {
 
 h1,
 ul,
+h3,
+h4,
 p {
   margin: 0px;
 }
@@ -21,4 +23,13 @@ p {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+img[src$=".jpg"] {
+  border-radius: 0.25rem;
 }
