--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -8,10 +8,8 @@
   gap: 1.25rem; /*20px*/
   justify-content: space-between;
   align-items: center;
-  padding: 1.25rem; /*20px*/
-  box-sizing: border-box;
-  max-width: 75rem; /*1200px;*/
-  margin: auto;
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .header-menu {
