--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
 @import url("./global.css");
+@import url("./utils/components/container.css");
 @import url("./utils/components/button.css");
 @import url("./utils/colors.css");
 @import url("./utils/font.css");
 @import url("./header.css");
 @import url("./introduction.css");
+@import url("./bikes/bike-list.css");
