--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,3 +6,4 @@
 @import url("./header.css");
 @import url("./introduction.css");
 @import url("./bikes/bike-list.css");
+@import url("./bikes/tecnlogy.css");
